# sysyem-graph

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.dev  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
api/: __init__.py  deps.py  main.py
api/routers/: graph.py  health.py  pipelines.py  reports.py
api/schemas/: graph.py  pipelines.py  reports.py
api/services/: graph_service.py  pipeline_service.py  report_service.py
api/tests/: test_graph_neo4j_unavailable.py  test_health.py  test_pipelines.py  test_report_service.py
core/: __init__.py
core/adapters/: __init__.py  base.py  confidence_scorer.py  enrichment.py  mapper.py  merger.py  registry.py  validator.py
core/config/: __init__.py  settings.py
core/facts/: __init__.py  fact.py  tree.py
core/frameworks/: __init__.py  definition.py  detector.py  effective.py  library.py  overlay.py
core/graph/: __init__.py  cli.py  client.py  loader.py  schema.py
core/languages/: __init__.py  grammar_registry.py  library.py  profile.py  resolution.py  visibility.py
core/llm/: __init__.py  anthropic_client.py  budgets.py  cache.py  client.py  enhance.py  factory.py  null_client.py  parser.py  prompts.py
core/resolvers/: __init__.py  config_binding_resolver.py  coverage_resolver.py  data_model_resolver.py  db_access_resolver.py  endpoint_resolver.py  forms_service_resolver.py  function_call_resolver.py  function_resolver.py  kafka_resolver.py  mock_resolver.py  oracle_call_resolver.py  query_resolver.py  resolver.py  shell_invoke_resolver.py  test_resolver.py
core/tests/: conftest.py  test_adapters.py  test_enrichment.py  test_types.py
core/types/: __init__.py  change.py  errors.py  nodes.py  service.py
core/walker/: __init__.py  (+1 more)
docs/: ARCHITECTURE.md  LLM_PROMPTS.md  PYTHON_QUICK_START.txt  QUICK_REFERENCE.md  complete_system_design.md  extensible_ingestion_framework.md  monorepo_structure.md  python_monorepo_structure.md  system_architecture.md
frameworks/: flask.yaml  java.yaml  pytest.yaml  python.yaml  spring.yaml
ingestion/: __init__.py  cli.py
ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+151 files in other folders)
