[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "system-graph"
version = "0.1.0"
description = "Multi-repo impact analysis system: Neo4j-backed dependency graph for smart polyrepo test selection"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kevin Sanjula", email = "kevinxsanjula@gmail.com" }]
keywords = ["impact-analysis", "polyrepo", "neo4j", "datadog", "ci"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "javalang>=0.13,<1",
    "neo4j>=5.18,<6",
    "datadog-api-client>=2.25,<3",
    "PyGithub>=2.3,<3",
    "httpx>=0.27,<1",
    "typer>=0.12,<1",
    "rich>=13.7,<14",
    "PyYAML>=6.0,<7",
    "python-dotenv>=1.0,<2",
    "tenacity>=8.2,<10",
    "structlog>=24.1,<26",
    "tree-sitter>=0.25,<1",
    "tree-sitter-python>=0.25,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1,<9",
    "pytest-cov>=5.0,<7",
    "pytest-asyncio>=0.23,<1",
    "respx>=0.21,<1",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
    "types-PyYAML",
]

[project.scripts]
sg-ingest = "ingestion.cli:app"
sg-graph = "core.graph.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "ingestion*"]
exclude = ["tests*", "docs*", ".venv*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["core", "ingestion", "tests"]
python_files = ["test_*.py"]
python_classes = ["Test*Suite", "*Tests"]
markers = [
    "integration: requires external services (Neo4j, Datadog, GitHub)",
]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
    "ignore::DeprecationWarning:pytest_asyncio.*",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true